Added background image and Twitter Link

--- a/styles.css
+++ b/styles.css
@@ -8,24 +8,24 @@ body {
   padding: 0;
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  color: rgb(252, 190, 133);
-  background: #1f4975;
+  color: #222;
+  background: #f7f5f0;
 }
 /* Link Styles */
 
 a {
   text-decoration: none;
-  color: #f2644e;
+  color: #999;
 }
 a:hover {
-  color: #1f4975;
+  color: #6633ff;
 }
 
 /* Section Styles */
 
 .main-nav {
   width: 100%;
-  background: #1f4975;
+  background: black;
   min-height: 30px;
   padding: 10px;
   position: fixed;
@@ -43,7 +43,7 @@ a:hover {
 .nav .name {
     display: block;
     margin-right: auto;
-    color: #f2644e;
+    color: white;
 }
 .nav li {
   padding: 5px 10px 10px 10px;
@@ -52,12 +52,12 @@ a:hover {
   transition: all .5s;
 }
 .nav a:hover {
-  color: #f2ec02
+  color: white
 }
 
 header {
   text-align: center;
-  background: url('images/background_home.jpg') no-repeat top center ;
+  background: url('images/background_home_town.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
@@ -70,37 +70,36 @@ header .profile-image {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 3px solid rgb(60, 59, 59);
+  border: 3px solid white;
   transition: all .5s;
 }
 header .profile-image:hover {
   transform: scale(1.3) rotate(360deg);
 }
 .tag {
-  background-color: #1f4975;
-  color: #FF7F50;
+  background-color: #efefef;
+  color: black;
   padding: 10px;
   border-radius: 5px;
   display: table;
   margin: 10px auto;
 } 
 .location {
-  background-color: #f2644e;
-  color: #1f4975;
-  font-weight: 900;
+  background-color: #222;
+  color: yellow;
 }
 .card {
   margin: 30px;
   padding: 20px 40px 40px;
   max-width: 500px;
   text-align: left;
-  background: #0e2e51;
-  border-bottom: 4px solid #3f63a9;
+  background: #fff;
+  border-bottom: 4px solid #ccc;
   border-radius: 6px;
   transition: all .5s;
 }
 .card:hover {
-  border-color: #f2644e;
+  border-color: #ff99ff;
 }
 
 ul.skills {
@@ -111,14 +110,14 @@ ul.skills {
 .skills li {
   border-radius: 6px;
   display: inline-block;
-  background: #1f4975;
+  background: #ff9904;
   color: white;
   padding: 5px 10px;
   margin: 2px;
 }
 
 .skills li:nth-child(odd) {
-  background: #f2644e;
+  background: #0399ff;
 }
 
 footer {
